[gd_scene load_steps=19 format=2]

[ext_resource path="res://Assets/Icons/save_file_white.png" type="Texture" id=1]
[ext_resource path="res://Assets/Icons/open_file_white.png" type="Texture" id=2]
[ext_resource path="res://UI/UIToolbar.gd" type="Script" id=3]
[ext_resource path="res://Assets/Icons/new_file_white.png" type="Texture" id=4]
[ext_resource path="res://Assets/Icons/clear_canvas_white.png" type="Texture" id=5]
[ext_resource path="res://Assets/Icons/redo_white.png" type="Texture" id=6]
[ext_resource path="res://Assets/Icons/undo_white.png" type="Texture" id=7]
[ext_resource path="res://Assets/Icons/brush_white.png" type="Texture" id=8]
[ext_resource path="res://Assets/Icons/eraser_white.png" type="Texture" id=9]
[ext_resource path="res://Assets/Icons/color_picker.png" type="Texture" id=10]
[ext_resource path="res://Assets/Icons/line_tool_white.png" type="Texture" id=11]
[ext_resource path="res://Assets/Icons/fixed_line_tool.png" type="Texture" id=12]
[ext_resource path="res://UI/Components/UIFlatTextureButton.gd" type="Script" id=13]
[ext_resource path="res://Assets/Fonts/font_11.tres" type="DynamicFont" id=14]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.207843, 0.211765, 0.227451, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxLine" id=3]
color = Color( 0.619608, 0.619608, 0.619608, 1 )
grow_begin = -10.0
grow_end = -10.0
vertical = true

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 0.298039, 0.298039, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="UIToolbar" type="PanelContainer"]
anchor_right = 1.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 12

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
margin_right = 4.0
margin_bottom = 40.0
custom_styles/separator = SubResource( 2 )

[node name="NewFileButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 16.0
margin_top = 11.0
margin_right = 34.0
margin_bottom = 29.0
hint_tooltip = "Create New File"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 4 )
script = ExtResource( 13 )
hover_tint = Color( 0.313726, 1, 0.839216, 1 )

[node name="OpenFileButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 46.0
margin_top = 11.0
margin_right = 64.0
margin_bottom = 29.0
hint_tooltip = "Open File"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
script = ExtResource( 13 )
hover_tint = Color( 0.313726, 1, 0.839216, 1 )

[node name="SaveFileButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 76.0
margin_top = 11.0
margin_right = 94.0
margin_bottom = 29.0
hint_tooltip = "Save File"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 1 )
script = ExtResource( 13 )
hover_tint = Color( 0.313726, 1, 0.839216, 1 )

[node name="ClearCanvasButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 106.0
margin_top = 11.0
margin_right = 124.0
margin_bottom = 29.0
hint_tooltip = "Clear Canvas"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 5 )
script = ExtResource( 13 )
hover_tint = Color( 0.313726, 1, 0.839216, 1 )

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
margin_left = 136.0
margin_right = 140.0
margin_bottom = 40.0
custom_styles/separator = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UndoButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 152.0
margin_top = 11.0
margin_right = 170.0
margin_bottom = 29.0
hint_tooltip = "Undo Action"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 7 )
script = ExtResource( 13 )
hover_tint = Color( 0.313726, 1, 0.839216, 1 )

[node name="RedoButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 182.0
margin_top = 11.0
margin_right = 200.0
margin_bottom = 29.0
hint_tooltip = "Redo Action"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 6 )
script = ExtResource( 13 )
hover_tint = Color( 0.313726, 1, 0.839216, 1 )

[node name="VSeparator3" type="VSeparator" parent="HBoxContainer"]
margin_left = 212.0
margin_right = 216.0
margin_bottom = 40.0
custom_styles/separator = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BrushButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 228.0
margin_top = 11.0
margin_right = 246.0
margin_bottom = 29.0
hint_tooltip = "Brush Tool"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 8 )
script = ExtResource( 13 )
hover_tint = Color( 0.313726, 1, 0.839216, 1 )

[node name="LineButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 258.0
margin_top = 12.0
margin_right = 274.0
margin_bottom = 28.0
hint_tooltip = "Brush Tool"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 11 )
script = ExtResource( 13 )
hover_tint = Color( 0.313726, 1, 0.839216, 1 )

[node name="FixedLineButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 286.0
margin_top = 12.0
margin_right = 302.0
margin_bottom = 28.0
hint_tooltip = "Brush Tool"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 12 )
script = ExtResource( 13 )
hover_tint = Color( 0.313726, 1, 0.839216, 1 )

[node name="EraserButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 314.0
margin_top = 11.0
margin_right = 332.0
margin_bottom = 29.0
hint_tooltip = "Eraser Tool"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 9 )
script = ExtResource( 13 )
hover_tint = Color( 0.313726, 1, 0.839216, 1 )

[node name="ColorPickerButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 344.0
margin_top = 11.0
margin_right = 362.0
margin_bottom = 29.0
hint_tooltip = "Eraser Tool"
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 10 )
script = ExtResource( 13 )
hover_tint = Color( 0.313726, 1, 0.839216, 1 )

[node name="VSeparator4" type="VSeparator" parent="HBoxContainer"]
margin_left = 374.0
margin_right = 378.0
margin_bottom = 40.0
custom_styles/separator = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorButton" type="Button" parent="HBoxContainer"]
margin_left = 390.0
margin_top = 10.0
margin_right = 450.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 20 )
size_flags_vertical = 4
custom_styles/hover = SubResource( 4 )
custom_styles/pressed = SubResource( 4 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
text = "ff0000"
__meta__ = {
"_edit_group_": true
}

[node name="BrushSizeSlider" type="HSlider" parent="HBoxContainer"]
margin_left = 462.0
margin_top = 10.0
margin_right = 582.0
margin_bottom = 30.0
rect_min_size = Vector2( 120, 20 )
size_flags_horizontal = 4
size_flags_vertical = 4
min_value = 1.0
max_value = 50.0
value = 5.0

[node name="BrushSizeLabel" type="Label" parent="HBoxContainer"]
margin_left = 594.0
margin_top = 13.0
margin_right = 606.0
margin_bottom = 27.0
custom_fonts/font = ExtResource( 14 )
text = "12"

[connection signal="pressed" from="HBoxContainer/NewFileButton" to="." method="_on_NewFileButton_pressed"]
[connection signal="pressed" from="HBoxContainer/OpenFileButton" to="." method="_on_OpenFileButton_pressed"]
[connection signal="pressed" from="HBoxContainer/SaveFileButton" to="." method="_on_SaveFileButton_pressed"]
[connection signal="pressed" from="HBoxContainer/ClearCanvasButton" to="." method="_on_ClearCanvasButton_pressed"]
[connection signal="pressed" from="HBoxContainer/UndoButton" to="." method="_on_UndoButton_pressed"]
[connection signal="pressed" from="HBoxContainer/RedoButton" to="." method="_on_RedoButton_pressed"]
[connection signal="pressed" from="HBoxContainer/ColorButton" to="." method="_on_ColorButton_pressed"]
[connection signal="value_changed" from="HBoxContainer/BrushSizeSlider" to="." method="_on_BrushSizeSlider_value_changed"]
